# nixcon-vouchers

./: .gitignore  README.md  contributors.csv  excluded.csv  flake.nix  included.csv  nixcon-vouchers.cabal  organisers.csv
app/: API.hs  CliArgs.hs  Config.hs  Contributor.hs  Log.hs  Main.hs  OAuth2.hs  Prelude.hs  Pretix.hs  Server.hs  Session.hs
static/: main.css  style.css
